[package]
name = "pangolin"
version = "0.1.0"
authors = ["iosmanthus <myosmanthustree@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
byteorder = "1"
pin-project = "1"
